--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "type": "module",
     "scripts": {
         "build": "vite build",
+        "dev:fresh": "rm -rf node_modules/.vite && vite",
         "dev": "vite"
     },
     "devDependencies": {
