--- a/compose.yaml
+++ b/compose.yaml
@@ -6,6 +6,7 @@ services:
             args:
                 WWWGROUP: '${WWWGROUP}'
         image: sail-8.5/app
+        mem_limit: 512m
         extra_hosts:
             - 'host.docker.internal:host-gateway'
         ports:
